--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=3000
-DB_USER=thalita
-DB_PASS=123456
-DB_NAME=banco_empregaJa
+DB_HOST=mysql-empregaja.alwaysdata.net
+DB_USER=empregaja
+DB_PASSWORD=trinity.inova2025
+DB_DATABASE=empregaja_trinity
