--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "exemplo",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.1",
-    "Express": "^3.0.1",
-    "mysql2": "^3.14.3"
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "handlebars": "^4.7.8",
+    "mysql2": "^3.14.3",
+    "nodemon": "^3.1.10"
   }
 }
