--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
+    "express-session": "^1.18.2",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.8",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "nodemon": "^3.1.10"
   }
